Update pom.xml to allow graalVM builds